[package]
name = "rust-dns-blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "5"
h2 = "0.3.19"
rand = "0.8.5"
simple-dns = "0.5.3"
parking_lot = "0.12.1"