[package]
name = "rust-dns-blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
hyper = { version = "0.14", features = ["full"] }
rustls = "0.21"
hyper-rustls = {version = "0.24.1", features = ["http2", "default"]}
tokio-rustls = "0.24.1"
webpki-roots = "0"
rustls-pemfile = "1"
url = "2"
base64 = "0"
simple-dns = "0.5"